<resources>
    <string name="app_name">Cicerone</string>
    <string name="list_saved_poi">Starred places</string>

    <string name="user_position">Latitude: %1$s Longitude: %2$s</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">Cicerone</string>
    <string name="channel_description">Notifications channel for the Cicerone app</string>
    <string name="title_activity_geofence_triggered">Arg: %1$s</string>
    <string name="location_category">%1$s</string>
    <string name="location_distance">%1$s meters away</string>
    <string name="location_description_yes_wikipedia">\"%1$s\" \n From Wikipedia.</string>
    <string name="location_description_no_wikipedia">No information available from Wikipedia.</string>
    <string name="tts_text_yes_wikipedia">You are close to %1$s, a %2$s %3$d meters away. Here is an excerpt from Wikipedia. %4$s. If you liked this recommendation, smash like and subscribe.</string>
    <string name="tts_text_no_wikipedia">You are close to %1$s, a %2$s %3$d meters away.</string>
    <string name="location_description">\"%1$s\" \n from Wikipedia</string>
    <string name="tts_button_label">Listen to information about this place</string>
    <string name='vote_button_label'>Did you like this recommendation?</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>

    <string name="see_all_starred_places_label">See all</string>
    <string name="shortInfoTextView">\"The most interesting knowledge doesn\'t have to be very special...\"</string>
    <string name="list_item_sub_info">%1$s • %2$s</string>
    <string name="list_item_short_text">\"%1$s\"</string>
    <string name="card_short_facts_label">Short facts</string>
    <string name="card_wikipedia_label">Wikipedia</string>
    <string name="card_detailed_facts_label">Detailed information</string>
    <string name="card_tip_label">Did you know?</string>
    <string name="card_tip_default">Most of the Earth’s longest-surviving species are found in the ocean. While cyanobacterias are technically the oldest living organisms on Earth, having appeared 2.8 billion years ago, the ocean sponge has also been on Earth for 580 million years, and jellyfish have been here for 550 million years.</string>
    <string name="wikipedia_article_link">Open in Wikipedia</string>
    <plurals name="numberPOI">
        <item quantity="one">"There is currently %1$s place near you. To begin exploring right now just start walking!"</item>
        <item quantity="other">"There are currently %1$s places near you. To begin exploring them right now just start walking!"</item>
    </plurals>
</resources>
